# gaussgen

./: CMakeLists.txt  env-gaussgen.sh.in  rootlogon.C.in
cmake/: gaussgenConfig.cmake.in
include/: gaussgen.hpp
src/: gaussgen.cpp
test/: CMakeLists.txt
test/src/: main.cpp
